--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.33.1",
     "core-js": "^3.25.3",
     "nuxt": "^2.17.0",
     "vue": "^2.7.10",
